feat(extract) allow running without libclang path
Simpler when libclang is already available from the system library
paths.